[gd_scene load_steps=4 format=3 uid="uid://csn4r5tegixac"]

[ext_resource type="Script" path="res://items_workshop/item_inspector/points_editor/points_editor_point.gd" id="1_vbdwv"]
[ext_resource type="Theme" uid="uid://cs33qvqc60ek3" path="res://theme.tres" id="1_xi5lw"]

[sub_resource type="LabelSettings" id="LabelSettings_ldiqu"]
font_size = 14
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Point" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_xi5lw")
script = ExtResource("1_vbdwv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(7, 7)
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(4, 4)
mouse_filter = 2
color = Color(1, 0, 1, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -128.0
offset_top = 13.0
offset_right = 128.0
offset_bottom = 39.0
text = "Torso Joint"
label_settings = SubResource("LabelSettings_ldiqu")
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
pivot_offset = Vector2(8, 8)
mouse_filter = 1
mouse_default_cursor_shape = 13

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
